# MTE544-Labs

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/bagreader/lib/bagreader/: bagrun
install/bagreader/share/bagreader/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
src/bag_files/: frames.gv
src/bagreader/bagreader/: bagrun.py  bagrun_map_test.py
src/lab2/map/load_map_rviz/: rviz2.launch.py
src/load_map_rviz/: map.launch.py  map_rviz.rviz  rviz2.launch.py  test.py
src/mte544_a_star/: CMakeLists.txt  package.xml
src/mte544_a_star/Office Map/Entry_4/: Entry_4.csv
src/mte544_a_star/launch/: gazebo_launch.launch.py  house.world  map_rviz.rviz  mte544_a_star.launch.py
src/mte544_a_star/src/: a_star.py  a_star_skeleton1.py  controller_server.py  mte544_navigation_client.py  mte544_navigation_server.py  p_controller.py
src/mte544_a_star/src/mte544_a_star/: a_star_skeleton1.py
src/mte544_action_interfaces/: CMakeLists.txt  package.xml
src/mte544_action_interfaces/action/: Move2Goal.action
src/mte544_particle_filter/: CMakeLists.txt  package.xml
src/mte544_particle_filter/launch/: particle_filter.launch.py
src/mte544_particle_filter/src/: run_particle_filter.py
