<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mte544_particle_filter</name>
  <version>0.0.0</version>
  <description>TODO: Particle Filter developed for MTE 544 Lab 2</description>
  <maintainer email="ayush.ghosh@uwaterloo.ca">ayush.ghosh</maintainer>
  <maintainer email="nshaju@uwaterloo.ca">nshaju</maintainer>
  <maintainer email="abhi.agrahari@uwaterloo.ca">abhi.agrahari</maintainer>
  <license>TODO: License declaration</license>
  

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>csv</depend>
  <depend>sqlite3</depend>
  <depend>rosbag2</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_py</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
